k8s/base/webapp/flowcar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowcar-deployment
  labels:
    app: flowcar-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flowcar-webapp
  template:
    metadata:
      labels:
        app: flowcar-webapp
    spec:
      containers:
        - name: flowcar-webapp
          image: fraguinha/flowcar-webapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
