k8s/base/webapp/flowcar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flowcar-service
spec:
  selector:
    app: flowcar-webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
